# json2postgresql-example

./: .gitignore  README.md  README.rst  pyproject.toml
json2postgresql_example/: config.py  create_table.py  main.py
