[tool.poetry]
name = "json2postgresql-example"
version = "0.1.0"
description = "\"Simple script that extracts desired data from json and stores it in postgreSQL database.\""
authors = ["jozefhn <jozef.hn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psycopg2 = "^2.9.3"
jsonpath-ng = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
